# ssl_h

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  action_testing.patch  codecov.yml  standalone_gui_grsim.sh  standalone_gui_real.sh  wercker.yml
3rd/: CMakeLists.txt
3rd/nnabla/: CMakeLists.txt  nnabla-ext-cuda-v1.11.0.patch  nnabla-ext-cuda-v1.7.0.patch  nnabla-v1.11.0.patch  nnabla-v1.15.0.patch  nnabla-v1.19.0.patch  use-correct-variables.patch
app/: CMakeLists.txt
app/ai-server/: CMakeLists.txt
app/standalone-gui/: CMakeLists.txt  main.cc  main.txt
src/: CMakeLists.txt  main.cc
src/ai_server/: CMakeLists.txt  driver.cc  driver.h
src/ai_server/controller/: base.cc  base.h  humanoid.cc  humanoid.h  pid_controller.cc  pid_controller.h  sliding_mode_controller.cc  sliding_mode_controller.h  state_feedback.cc  state_feedback.h  state_feedback_controller.cc  state_feedback_controller.h
src/ai_server/controller/detail/: sliding_mode_controller.cc  sliding_mode_controller.h  smith_predictor.cc  smith_predictor.h  velocity_generator.cc  velocity_generator.h
src/ai_server/filter/: acceleration_calculator.cc  acceleration_calculator.h  base.h  coordinate_transformation.cc  coordinate_transformation.h  va_calculator.cc  va_calculator.h  velocity_calculator.cc  velocity_calculator.h
src/ai_server/filter/state_observer/: ball.cc  ball.h  robot.cc  robot.h
src/ai_server/game/: context.h  nnabla.cc  nnabla.h
src/ai_server/game/action/: autonomous_ball_place.cc  autonomous_ball_place.h  ball_place.cc  ball_place.h  base.cc  base.h  chase_ball.cc  chase_ball.h  clear.cc  clear.h  get_ball.cc  get_ball.h  goal_keep.cc  goal_keep.h  guard.cc  guard.h  kick.cc  kick.h  kick_action.cc  kick_action.h  marking.cc  marking.h  move.cc  move.h  move_2walk.cc  move_2walk.h  no_operation.cc  no_operation.h  receive.cc  receive.h  recerve.cc  recerve.h  robot_position_move.cc  robot_position_move.h  rooth.cc  rooth.h  rush.cc  rush.h  turn_kick.cc  turn_kick.h  (+4 more)
src/ai_server/game/agent/: alignment.cc  alignment.h  all.cc  all.h  ball_placement.cc  ball_placement.h  base.cc  base.h  defense.cc  defense.h  halt.cc  halt.h  kick_off.cc  kick_off.h  kick_off_waiter.cc  kick_off_waiter.h  marking.cc  marking.h  penalty_kick.cc  penalty_kick.h  performance.cc  performance.h  regular.cc  regular.h  setplay.cc  setplay.h  stopgame.cc  stopgame.h
src/ai_server/game/captain/: base.h  first.cc  first.h
src/ai_server/game/detail/: mcts.cc  mcts.h
src/ai_server/game/formation/: ball_placement.cc  ball_placement.h  base.cc  base.h  first_formation.cc  first_formation.h  halt.cc  halt.h  kickoff_attack.cc  kickoff_attack.h  kickoff_defense.cc  kickoff_defense.h  penalty_attack.cc  penalty_attack.h  penalty_defense.cc  penalty_defense.h  setplay_attack.cc  setplay_attack.h  setplay_defense.cc  setplay_defense.h  shootout_attack.cc  shootout_attack.h  shootout_defense.cc  shootout_defense.h  steady.cc  steady.h  stopgame.cc  stopgame.h  timeout.cc  timeout.h
src/ai_server/logger/: formatter.cc  formatter.h  log_item.h  logger.cc  logger.h  sink_registry.cc  sink_registry.h
src/ai_server/logger/detail/: formatter.cc  formatter.h
src/ai_server/logger/sink/: base.cc  base.h  function.cc  function.h  null.cc  null.h  ostream.h
src/ai_server/model/: ball.cc  ball.h  command.cc  command.h  field.cc  field.h  refbox.cc  refbox.h  refmessage_string.h  robot.cc  robot.h  team_color.h  team_info.cc  team_info.h  world.cc  world.h  world_updater.cc  world_updater.h
src/ai_server/model/config/: spec.h
src/ai_server/model/detail/: confidence_comparator.h
src/ai_server/model/geometry/: box.h  point.h
src/ai_server/model/motion/: back_kick.cc  back_kick.h  base.cc  base.h  getup.cc  getup.h  halt.cc  halt.h  kick_forward_l.cc  kick_forward_l.h  kick_forward_r.cc  kick_forward_r.h  left_kick.cc  left_kick.h  open_leg.cc  open_leg.h  open_leg_left.cc  open_leg_left.h  open_leg_right.cc  open_leg_right.h  right_kick.cc  right_kick.h  run_backward.cc  run_backward.h  run_forward.cc  run_forward.h  run_left.cc  run_left.h  run_right..cc  run_right.h  stop.cc  stop.h  stop_m.h  turn_left.cc  turn_left.h  turn_right.cc  turn_right.h  walk.cc  walk.h  walk_backward.cc  (+7 more)
src/ai_server/model/obstacle/: box.h  field.h  point.h  robot.h  segment.h
src/ai_server/model/setpoint/: types.h
src/ai_server/model/updater/: ball.cc  ball.h  field.cc  field.h  refbox.cc  refbox.h  robot.cc  robot.h  world.cc  world.h
src/ai_server/planner/: base.cc  base.h  human_like.cc  human_like.h  obstacle_list.h  rrt_star.cc  rrt_star.h
src/ai_server/planner/detail/: clipping.h  collision.h  geometry_helper.h  obstacle_tree.h
src/ai_server/planner/impl/: human_like.h  rrt_star.cc  (+1 more)
src/ai_server/radio/: grsim.h  humanoid.h  kiks.h  ssl_simproto.h
src/ai_server/receiver/: refbox.cc  refbox.h  robot.cc  robot.h  vision.cc  vision.h
src/ai_server/sender/: base.h  grsim.cc  grsim.h  kiks.cc  kiks.h
src/ai_server/util/: adaptor.h  algorithm.h  dependent_false.h  math.cc  math.h  serial.cc  serial.h  thread.h  time.h
test/: CMakeLists.txt  asio_helper.h  driver.cc  example.cc  field.cc  logger.cc
test/filter/: base.cc  coordinate_transformation.cc  va_calculator.cc  velocity_calculator.cc
test/filter/state_observer/: ball.cc  robot.cc
test/game/: nnabla.cc
test/game/action/: with_planner.cc
test/game/formation/: halt.cc
test/model/: ball.cc  command.cc  field.cc  refbox.cc  robot.cc  world.cc  world_updater.cc
test/model/geometry/: box.cc  point.cc
test/model/obstacle/: field.cc  robot.cc
test/model/updater/: ball.cc  field.cc  refbox.cc  robot.cc  world.cc
test/radio/: grsim.cc  kiks.cc  ssl_simproto.cc
test/radio/connection/: serial.cc  udp.cc
test/receiver/: refbox.cc  vision.cc
test/test_helpers/: asio.h  signal_slot.h
test/util/: adaptor.cc  algorithm.cc  math.cc  slot_testing_helper.h  time.cc
test/util/kick/: convert.cc
test/util/math/: affine.cc  angle.cc  distance.cc  geometry.cc  geometry_traits.cc  to_vector.cc
test/util/net/: multicast.cc
(+39 files in other folders)
