file(GLOB_RECURSE SOURCES ./*.cc)

foreach(F ${SOURCES})
  file(READ ${F} TEST_SOURCE)
  if(TEST_SOURCE MATCHES [[BOOST_TEST_MODULE ([a-zA-Z0-9_]+)]])
    set(TEST_EXECUTABLE_NAME ${CMAKE_MATCH_1})
    add_executable(${TEST_EXECUTABLE_NAME} ${F})
    target_link_libraries(${TEST_EXECUTABLE_NAME} ai-server-lib ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
    add_test(${TEST_EXECUTABLE_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_EXECUTABLE_NAME})
  else()
    message(SEND_ERROR "${F}: Test module name is not set!")
  endif()
endforeach()
